--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "url": "git+ssh://git@github.com/petatemarvin26/vin-socket.server.git"
   },
   "keywords": [
-    "websocket"
+    "Websocket",
+    "ws"
+  ],
+  "files": [
+    "dist",
+    "src"
   ],
   "author": "Marvin Petate",
   "license": "ISC",
