--- a/package.json
+++ b/package.json
@@ -1,32 +1,47 @@
 {
   "name": "vin-socket.server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "./dist/index.js",
-  "description": "This application is for server side application",
+  "description": "This application maintains the light weight of transmision and performance over websocket connection",
+  "license": "ISC",
   "scripts": {
-    "build": "rm -rf dist; webpack --env production --config webpack.config.js"
+    "build": "rm -rf ./dist; webpack --env production --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/petatemarvin26/vin-socket.server.git"
   },
   "keywords": [
-    "websocket"
+    "ws"
   ],
-  "author": "Marvin Petate",
-  "license": "ISC",
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
+  "author": {
+    "email": "petatemarvin26@gmail.com",
+    "name": "Marvin Petate",
+    "url": "https://marvin-petate.web.app/"
+  },
   "bugs": {
     "url": "https://github.com/petatemarvin26/vin-socket.server/issues"
   },
   "homepage": "https://github.com/petatemarvin26/vin-socket.server#readme",
   "devDependencies": {
     "@types/webpack": "^5.28.1",
+    "@types/ws": "^8.5.4",
     "ts-loader": "^9.4.2",
+    "ts-transform-paths": "^3.0.0",
     "typescript": "^5.0.4",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2"
   },
   "dependencies": {
+    "@types/object-hash": "^3.0.2",
+    "object-hash": "^3.0.0",
     "ws": "^8.13.0"
   }
 }
